# prelegal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: auth.py  auth_router.py  chat.py  db.py  document_types.py  document_types_router.py  documents_router.py  main.py  settings.py  static.py
backend/app/models/: documents.py  sessions.py  users.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_chat.py  test_db.py  test_document_types.py  test_document_types_router.py  test_documents.py  test_static.py
docs/: TASK-1.md  TASK-2.md  TASK-3.md  TASK-4.md  TASK-5.md  TASK-6.md
frontend/: AGENTS.md  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/: AppHeader.test.tsx  ChatPanel.test.tsx  DocumentPreview.test.tsx  DocumentsPage.test.tsx  HomePage.test.tsx  LoginPage.test.tsx  NdaDocument.test.tsx  NdaForm.test.tsx  SignupPage.test.tsx  document-fields.test.ts  document-registry.test.ts  field-format.test.ts  generate-document-pdf.test.tsx  generate-nda-pdf.test.tsx  generate-pdf-route.test.ts  markdown-template.test.ts  nda-chat.test.ts  nda-content.test.ts  nda-schema.test.ts  resume-document.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppHeader.tsx  ChatPanel.tsx  DocumentBody.tsx  DocumentCoverSummary.tsx  DocumentPdfPreview.tsx  DocumentPreview.tsx  NdaDocument.tsx  NdaForm.tsx  NdaPdfDocument.tsx
frontend/e2e/: login.spec.ts  (+5 more)
scripts/: generate_registry.py  start-mac.sh
templates/: LICENSE.txt
(+43 files in other folders)
